R107: - Fixed #51 - deleting a net causes kismac to crash
	  - Fixed #9 - used Geoffs patch to fix GPS update...

R106: - Fixed some silly warnings as described in #61 note, this is not the patch from 61 because it was incorrect

R102: - improved permanent airport extreme enabling & installing (even more)
	  - including removal
	  - fixed serveral small bugs
	  - added new "build system"

R101: - changes in spanish translation

R100:  This is a big commit, a present for R100.  
       -Added Client IP Address detection.  I need to think about ways to detect the ip of the ap if possible.
              --Fixed bug in existing sourceIPAsString() where we were adding sizeof(WLFrame) to the value instead of to the pointer.
       -Fixed # 29 columns are no longer selected when resizing.
       -Moved the search catagory menu into the Search cell where it belongs
       -Better matching to vendors.db  (some macs in vendors.db are in the form xx:xx and we were not checking against these)
       -AE Passive mode forever now reads setting directly from the .kext.  This should make sure our settings always reflect what is really set.
       -Add ae passive forever setting to installer for both install and remove.
       -Add Licence Info to growl controler files
       -Maybe other stuff I can't remember

R99: Default Map

R98: ASCII values below 32 are not valid in XML.  Fixes Google Earth Export.  Also use UTF-8 cString since that is what our encoding claims to be.

R97: Add option to enable Airport Extreme Monitor Mode forever

R96: Fix Altivec WPA Wordlist crack on ppc that I broke in R91.  This accelerated wpa crack does not work on intel but I'll leave the code there in case anyone wants to investigate further.  Also added a words / sec status to the wpa crack dialog that I used for benchmarking while debigging this problem.

R95: Hopfully fix the last of the build issues some people are having  (including growl link issues)
